<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_margin="10dp"
    android:id="@+id/ll_main"
    android:layout_height="wrap_content">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="10dp"
    android:textSize="14dp"
    android:text="Enter details"
    android:textColor="@android:color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/et_title"
            android:background="@drawable/bg_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawablePadding="10dp"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="12dp" />





        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_txt"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="12dp" />


        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_txt"
            android:drawablePadding="10dp"
            android:hint="@string/description"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/tv_add"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="12dp"
            android:paddingBottom="5dp"
            android:paddingRight="45dp"
            android:paddingLeft="45dp"
            android:backgroundTint="@android:color/white"
            android:background="@drawable/bg_edit_txt"
            android:textColor="@android:color/black"
            android:text="@string/save"/>

    </LinearLayout>


</LinearLayout>