<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:paddingTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:padding="20sp"
                    android:src="@drawable/icn_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="30dp"
                    android:paddingTop="30dp"
                    android:paddingRight="30dp">

                    <EditText
                        android:id="@+id/et_unm"
                        android:background="@drawable/bg_edit_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textSize="12dp"
                        android:drawableStart="@drawable/username"/>





                    <EditText
                        android:id="@+id/et_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bg_edit_txt"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textSize="12dp"
                        android:drawableStart="@drawable/password"/>


                    <Button
                        android:id="@+id/btn_login"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:textSize="12dp"
                        android:paddingBottom="5dp"
                        android:paddingRight="25dp"
                        android:paddingLeft="25dp"
                        android:backgroundTint="@android:color/holo_blue_light"
                        android:background="@drawable/bg_edit_txt"
                        android:textColor="@android:color/black"
                        android:text="@string/login"/>

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</LinearLayout>